# succint

./: README.md
tfidf/: TF-IDF-Merge.ipynb  scaleTest.ipynb
tfidf/cppImpl/: Makefile  buildIndex.cc  buildIndex.h  foo.xml  index.cc  index.h  manifest.cc  manifest.h  preprocess.h  test.cc  tfidf.h  utils.h
tfidf/cppImpl/gtest/: CMakeLists.txt  README.md  buildIndex_test.cc  foo_invalid.xml  manifest_test.cc
tfidf/cppImpl/src/: Makefile  buildIndex.cc  buildIndex.h  foo.xml  manifest.h  mergeIndex.cc  mergeIndex.h  preprocess.h  serialized_index.txt  test.cc  tfidf.h  util.cc  util.h
tfidf/hat-trie-scaleTest/: CMakeLists.txt  test.cpp
